2008-06-18  André Wöbbeking  <Woebbeking@kde.org>

	* Fix BR #164216:
	  Fixed crash when updating the status after adding a directory to a repository.

2007-09-11  André Wöbbeking  <Woebbeking@kde.org>

	* Fix BR #148162:
	  Workaround a regression in Qt 3.3.8 QDateTime::fromString().
	  Patch by Martin Koller.

2007-01-13  André Wöbbeking  <Woebbeking@kde.org>

	* Fix:
	  Handle '.' in user name when adding a repository.

2006-09-02  André Wöbbeking  <Woebbeking@kde.org>

	* Fix BR #133129:
	  Dates from cvs history are parsed correctly.

	  While at it also made parsing more robust and added event 'P'
	  "Update, Patched".

2006-08-12  André Wöbbeking  <Woebbeking@kde.org>

	* Fix BR #131695:
	  Broken repository locations don't crash cvsservice anymore.

2005-08-03  Christian Loose <christian.loose@kdemail.net>

	* Implemented wish #92938:
	  Added ability to exclude files in the commit dialog from
	  the subsequent commit.

2005-03-30  Christian Loose <christian.loose@kdemail.net>

	* Change License to GPL.

2005-03-17  Christian Loose <christian.loose@kdemail.net>

	* Implemented wish #40760:
	  New item in context menu to fold/unfold the
	  selected folder and its subfolders.

2005-03-07  Christian Loose <christian.loose@kdemail.net>

	* Added support for commit template message (CVS/Template) in
	  the commit dialog. Patch by Darrell Esau.

2005-03-04  Christian Loose <christian.loose@kdemail.net>

	* Fix BR #97664:
          Fix statusbar when embedded in Konqueror.

2005-01-31  Christian Loose  <christian.loose@kdemail.net>

	* Implemented wish #95257:
	  Added new setting for a color. It is used to highlight files in
	  the update view with status "Not in CVS".

2005-01-09  André Wöbbeking  <Woebbeking@kde.org>

	* Added an icon for "Diff". Thanks to Jonathan Riddell.

2004-12-08  Christian Loose  <christian.loose@kdemail.net>

	* Fix BR  #90346:
          Normalize user-entered CVSROOT specification before adding